[project]
name = "gpt-from-scratch"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "BlakeJC94", email = "blakejamescook@gmail.com" }
]
dependencies = [
    "torch>=2.3.1",
    "numpy>=1.26.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipython>=8.25.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gpt_from_scratch"]
